--- a/community.html
+++ b/community.html
@@ -44,7 +44,7 @@ header:
 <!---------------Events------------->
 <section class="px-5p py-10p"> 
 
-    <p class="title-font text-4xl pb-5p"> Events </p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p"> Events </p>
 
     <p class="title-font text-2xl pb-2p"> Jump For Hope </p>
 
@@ -62,7 +62,7 @@ header:
 <!---------------Giving Back------------->
 <section class="px-5p pb-10p"> 
 
-    <p class="title-font text-4xl pb-5p"> Giving Back </p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p"> Giving Back </p>
 
     <p> At Pondok Santi Estate, the team is cultivating a “food forest.” This project is expected to produce such an abundance of food that we will be able to donate fruits and vegetables to local communities on Gili Trawangan and in Lombok.</p>
 
