--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -40,7 +40,7 @@ quote-image: /images/aj-hackett-bungy-aj-hackett-international.png
 <section class="px-5p pt-10p">
 
     <div class="pb-10p">
-        <p class="title-font text-4xl"> AJ Hackett is the kiwi innovator who built a business empire on adrenaline and adventure. </p>
+        <p class="title-font text-2xl sm:text-4xl"> AJ Hackett is the kiwi innovator who built a business empire on adrenaline and adventure. </p>
     </div>
 
     <div class="grid grid-cols-2 mb-5p">
@@ -91,7 +91,7 @@ quote-image: /images/aj-hackett-bungy-aj-hackett-international.png
 <section class="px-5p grid grid-cols-1 gap-y-5 py-10p">
 
     <div class="col-span-full pb-5p">
-        <p class="title-font text-4xl"> Meet AJ Hackett </p>
+        <p class="title-font text-2xl sm:text-4xl"> Meet AJ Hackett </p>
     </div>
 
     <div style="padding:56.25% 0 0 0;position:relative;" class="pb-2p">
