--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -79,7 +79,7 @@ people:
             </div>
           </div>
           <div class="col-span-3 pl-5p">
-            <p class="title-font text-4xl pb-1p"> {{ person.name }} </p>
+            <p class="title-font text-2xl sm:text-4xl pb-1p"> {{ person.name }} </p>
             <p> {{ person.about }} </p>
           </div>
         </div>
