--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@ gallery-images:
 <!---------------Skypark Cairns Roof------------->
 <section class="px-5p py-10p"> 
 
-    <p class="title-font text-4xl pb-5p">Skypark Cairns Roof </p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p">Skypark Cairns Roof </p>
 
     <div class="grid grid-cols-2 mb-5p">
         <div class="pr-5p">
