--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -39,7 +39,7 @@ values-image-alt:
 <section class="px-5p pt-10p">
 
     <div class="pb-5p">
-        <p class="title-font text-4xl"> Our Purpose </p>
+        <p class="title-font text-2xl sm:text-4xl"> Our Purpose </p>
     </div>
 
     <div class="grid grid-cols-2 mb-5p">
@@ -61,7 +61,7 @@ values-image-alt:
 <section class="px-5p pt-10p">
 
     <div class="pb-5p">
-        <p class="title-font text-4xl"> Our Promise </p>
+        <p class="title-font text-2xl sm:text-4xl"> Our Promise </p>
     </div>
 
     <div class="grid grid-cols-2 mb-5p">
@@ -83,7 +83,7 @@ values-image-alt:
 <section class="px-5p pt-10p">
 
     <div class="pb-5p">
-        <p class="title-font text-4xl"> Our Values </p>
+        <p class="title-font text-2xl sm:text-4xl"> Our Values </p>
     </div>
 
     <div class="grid grid-cols-2 mb-5p">
