--- a/safety-management.html
+++ b/safety-management.html
@@ -28,7 +28,7 @@ header:
 <section class="px-5p py-10p">
 
     <div class="pb-10p">
-        <p class="title-font text-4xl"> AJ Hackett International is committed to effectively managing health, safety, and welfare for all of our stakeholders. </p>
+        <p class="title-font text-2xl sm:text-4xl"> AJ Hackett International is committed to effectively managing health, safety, and welfare for all of our stakeholders. </p>
     </div>
 
     <p class="pb-5p sm:pb-2p"> We strive to achieve a high level of safety for our customers and crew through the following methods:</p>
