--- a/skypark-aj-hackett.html
+++ b/skypark-aj-hackett.html
@@ -89,7 +89,7 @@ site:
 
 <section class="px-5p">
     {% for item in page.site %}
-        <h3 class="title-font text-4xl pb-1p"> {{ item.location }} </h3>
+        <h3 class="title-font text-2xl sm:text-4xl pb-1p"> {{ item.location }} </h3>
         <hr class="pb-1p">
         <div class="relative h-full min-h-30 sm:min-h-50">
             <a href="{{ item.url }}">
