--- a/sustainability.html
+++ b/sustainability.html
@@ -76,7 +76,7 @@ beehives-alt:
 <!---------------Pondok Sustainability------------->
 <section class="px-5p pt-10p"> 
 
-    <p class="title-font text-4xl pb-5p"> Sustainability Initiatives at Pondok Santi Estate </p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p"> Sustainability Initiatives at Pondok Santi Estate </p>
 
     <div class="grid grid-cols-2 grid-rows-2 gap-5 mb-5p">
         <!-- Text Content -->
@@ -110,7 +110,7 @@ beehives-alt:
 <!---------------Cairns Sustainability------------->
 <section class="px-5p pt-10p"> 
 
-    <p class="title-font text-4xl pb-5p"> Cairns Biodiversity Survey, Mapping, and Environmental Management Project </p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p"> Cairns Biodiversity Survey, Mapping, and Environmental Management Project </p>
 
     <div class="grid grid-cols-2 gap-5 mb-5p">
         <!-- Text Content -->
@@ -135,7 +135,7 @@ beehives-alt:
 <!---------------Normandie Sustainability------------->
 <section class="px-5p pt-10p"> 
 
-    <p class="title-font text-4xl pb-5p"> Normandie Natura 2000 </p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p"> Normandie Natura 2000 </p>
 
     <div class="grid grid-cols-2 gap-5 mb-5p">
         <!-- Text Content -->
@@ -157,7 +157,7 @@ beehives-alt:
 <!---------------Beehives------------->
 <section class="px-5p py-10p"> 
 
-    <p class="title-font text-4xl pb-5p"> Bee Hives at Souleuvre Viaduct </p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p"> Bee Hives at Souleuvre Viaduct </p>
 
     <div class="grid grid-cols-2 gap-5 mb-5p">
         <!-- Text Content -->
