--- a/timeline.html
+++ b/timeline.html
@@ -114,7 +114,7 @@ timeline:
 <section class="px-5p grid grid-cols-12 py-10p gap-5"> 
 
     <div class="col-span-full pb-5p">
-        <p class="title-font text-4xl">The Timeline of AJ Hackett International</p>
+        <p class="title-font text-2xl sm:text-4xl">The Timeline of AJ Hackett International</p>
     </div>
 
     <div class="col-span-full">
@@ -132,7 +132,7 @@ timeline:
 
     {% for item in page.timeline %}
         <div class="col-span-3 border-r pr-5"> 
-            <p class="title-font text-4xl pt-5">{{ item.year }}</p>
+            <p class="title-font text-2xl sm:text-4xl pt-5">{{ item.year }}</p>
         </div>
         <div class="col-span-9 pl-5"> 
             <p class="title-font text-2xl pb-5 pt-5">{{ item.heading }}</p>
