--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@ header:
 <section class="px-5p pt-10p">
 
     <div class="pb-10p">
-        <p class="title-font text-4xl">We look forward to hearing from you!</p>
+        <p class="title-font text-2xl sm:text-4xl">We look forward to hearing from you!</p>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-5p mb-10p">
