--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -287,7 +287,7 @@ experience:
 <section class="px-5p pb-10p">
     {% for item in page.experience %}
     <div class="pt-10p" id="{{ item.id }}">
-        <h3 class="title-font text-4xl pb-1p">{{ item.name }}</h3>
+        <h3 class="title-font text-2xl sm:text-4xl pb-1p">{{ item.name }}</h3>
         <hr class="pb-2p sm:pb-1p">
 
         <!-- Large Featured Image -->
