--- a/reconciliation.html
+++ b/reconciliation.html
@@ -32,7 +32,7 @@ reconciliation-alt:
 <!---------------Pondok Sustainability------------->
 <section class="px-5p py-10p"> 
 
-    <p class="title-font text-4xl pb-5p"> Endorsement of Reflect RAP and Commitment to Reconciliation </p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p"> Endorsement of Reflect RAP and Commitment to Reconciliation </p>
 
     <div class="grid grid-cols-2 gap-5 mb-5p">
         <!-- Text Content -->
