--- a/pondok-santi-estate.html
+++ b/pondok-santi-estate.html
@@ -19,7 +19,7 @@ seo:
   hide-from-google: true
 header:
  - image: /images/pondok-santi-estate-on-gili-trawangan-lombok.png
-   position: 
+   position: 70% 50%
    label: 
    title: Pondok Santi Estate
    text: "Elegance in Paradise: Experience Gili Trawangan"
@@ -38,28 +38,30 @@ gallery-images:
    img-alt: 
 ---
 
-<section class="px-5p pt-10p">
-
-    <div class="pb-5p">
-        <p class="pb-2p"> Set amidst the <strong>idyllic shores of Gili Trawangan, Pondok Santi Estate offers an escape from the ordinary. From our luxurious accommodations to our exquisite dining experiences, every moment is crafted to elevate your senses.</strong> Welcome to a world where serenity meets sophistication, where every detail is designed to enchant and inspire. Welcome to Pondok Santi Estate.
+<section class="max-w-screen-2xl mx-auto">
+  <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-10p sm:pb-0">
+    <div>
+        <p class="pb-10p sm:pb-5p xl:pb-2p"> Set amidst the <strong>idyllic shores of Gili Trawangan, Pondok Santi Estate offers an escape from the ordinary. From our luxurious accommodations to our exquisite dining experiences, every moment is crafted to elevate your senses.</strong> Welcome to a world where serenity meets sophistication, where every detail is designed to enchant and inspire. Welcome to Pondok Santi Estate.
         </p>
-        <div class="mb-5p">
+        <div class="mb-15p sm:mb-10p xl:mb-5p sm:mt-2p md:mt-0">
             <a href="#" class="button" aria-label="">Visit Pondok Santi Estate</a>
         </div>
     </div>
-
+  </div>
 </section>
 
 
-<section class="px-5p pb-10p">
-  <!-- Gallery Images -->
-  <div class="grid grid-cols-3 gap-1 w-full overflow-x-auto" id="lightgallery">
-    {% for image in page.gallery-images %}
-    <a class="col-span-1" href="{{ image.img-url }}" aria-label="View larger version of the image">
-      <div class="aspect-square relative">
-        <img class="w-full h-full object-cover object-center rounded-xl sm:rounded-3xl" src="{{ image.img-url }}" alt="{{ image.img-alt }}">
-      </div>
-    </a>
-    {% endfor %}
+<section class="max-w-screen-2xl mx-auto">
+  <div class="px-5p pb-15p sm:pb-10p xl:pb-5p">
+    <!-- Gallery Images -->
+    <div class="sm:grid sm:grid-cols-3 gap-1 w-full overflow-x-auto" id="lightgallery">
+      {% for image in page.gallery-images %}
+      <a class="col-span-1" href="{{ image.img-url }}" aria-label="View larger version of the image">
+        <div class="aspect-square relative mb-2p">
+          <img class="w-full h-full object-cover object-center rounded-xl sm:rounded-3xl" src="{{ image.img-url }}" alt="{{ image.img-alt }}">
+        </div>
+      </a>
+      {% endfor %}
+    </div>
   </div>
 </section>
